--- a/scorecard.Rmd
+++ b/scorecard.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Predicting student debt load"
-author: "Your name"
+author: "Julia Du"
 date: "`r lubridate::today()`"
 output: github_document
 ---
