confused attempt at linear regression w/ recipes

--- a/scorecard.Rmd
+++ b/scorecard.Rmd
@@ -7,12 +7,44 @@ output: github_document
 
 ## Load necessary libraries
 
-```{r}
+```{r, echo = FALSE}
 library(tidyverse)
 library(tidymodels)
 library(rcfss)
+library(yardstick)
 ```
 
+
+lm_fit <- lm_mod %>% 
+  fit(debt ~ cost * type, data = scorecard)
+lm_fit
+
+
+```{r basic_linear}
+debt_rec <- recipe(debt ~ ., data = scorecard) %>% 
+  update_role(unitid, name, new_role = "ID") %>%
+  step_rm(state, openadmp) %>% # check
+  step_medianimpute(all_numeric()) %>%
+  step_modeimpute(all_nominal(), -all_outcomes()) %>%
+  step_dummy(all_nominal(), -all_outcomes())
+
+lm_mod <- linear_reg() %>% 
+  set_engine("lm")
+
+debt_wflow <- workflow() %>%
+  add_model(lm_mod) %>%
+  add_recipe(debt_rec)
+
+## should i be using training data? probs not right? am i making this too complicated
+debt_fit <- debt_wflow %>%
+  fit(data = scorecard)
+
+debt_fit %>%
+  pull_workflow_fit() %>%
+  tidy()
+
+# predict(object = debt_fit, new_data = ???)
+```
 
 ## Session info
 
