--- a/scorecard.Rmd
+++ b/scorecard.Rmd
@@ -14,7 +14,6 @@ library(tidyverse)
 library(tidymodels)
 library(rcfss)
 library(yardstick)
-library(reprex)
 
 set.seed(123)
 ```
@@ -25,6 +24,7 @@ lm_fit <- lm_mod %>%
 lm_fit
 
 ASK WHY fit_resample
+also what are "appropriate visualization techniques" for these models
 
 ```{r basic_line}
 lm_mod <- linear_reg() %>% 
@@ -62,7 +62,7 @@ lm_fit_rs <- debt_wflow %>%
   fit_resamples(folds_score)
 
 lm_fit_rs %>%
-  collect_metrics(summary = TRUE) %>%
+  collect_metrics() %>%
   filter(.metric == "rmse")
 
  ## check understanding: don't need predict command cuz using 10 fold to resample automatically does that?
@@ -72,8 +72,77 @@ lm_fit_rs %>%
 ```
 
 
-```{r decision tree}
+```{r decision_tree}
+#tree_mod <- decision_tree() %>% 
+ # set_engine("rpart") %>%
+  #set_mode("regression")
 
+# having issues here
+#update_model(debt_wflow, tree_mod) %>%
+ # fit_resamples(folds) %>%
+  #collect_metrics() 
+
+# gonna try a tuned model
+score_split <- initial_split(scorecard)
+
+score_train <- training(score_split)
+score_test <- testing (score_split)
+
+tune_spec <- 
+  decision_tree(
+    cost_complexity = tune(),
+    tree_depth = tune()
+  ) %>% 
+  set_engine("rpart") %>% 
+  set_mode("regression")
+
+tree_grid <- grid_regular(cost_complexity(),
+                          tree_depth(),
+                          levels = 5)
+
+#tree_grid %>% 
+ # count(tree_depth)
+
+tree_folds <- vfold_cv(score_train)
+
+tree_wf <- workflow() %>%
+  add_model(tune_spec) %>%
+  add_recipe(debt_rec)
+
+tree_res <- 
+  tree_wf %>% 
+  tune_grid(
+    resamples = tree_folds,
+    grid = tree_grid
+    )
+
+tree_res %>%
+  collect_metrics() %>%
+  filter(.metric == "rmse")
+
+# then choose the best model to finish tuning
+best_tree <- tree_res %>%
+  select_best("rmse")
+
+final_tree_wf <- tree_wf %>%
+  finalize_workflow(best_tree)
+
+# fit best model to training data
+final_tree <- final_tree_wf %>%
+  fit(data = score_train)
+
+# can see how important each var is here
+library(vip)
+
+final_tree %>% 
+  pull_workflow_fit() %>% 
+  vip()
+
+# last fit & eval of model performance
+final_tree_wf %>%
+  last_fit(score_split) %>%
+  collect_metrics() %>%
+  filter(.metric == "rmse")
 ```
 
 
