--- a/gss-colrac.Rmd
+++ b/gss-colrac.Rmd
@@ -17,6 +17,8 @@ library(usemodels)
 library(kknn)
 library(glmnet)
 library(xgboost)
+library(vip)
+library(lubridate)
 
 # load correct gss data frame
 data("gss", package = "rcfss")
@@ -173,7 +175,6 @@ boost_res %>%
   geom_point(size = 2) +
   facet_wrap(~ min_n, labeller = label_both) +
   scale_color_viridis_d(option = "plasma", begin = .9, end = 0) +
-#  scale_x_continuous(breaks=c(0, 0.05, 0.1)) +
   scale_x_log10(labels = scales::label_number()) +
   theme(axis.text.x = element_text(angle = 90)) +
   labs(title = "Accuracy across different hyperparameter values",
@@ -181,6 +182,8 @@ boost_res %>%
        y = "Mean accuracy",
        color = "Tree depth")
 ```
+can see that highest accuracy comes from min_n of 2. looking closer, see that tree depth of 8 & log10(learn rate) of around .00001 gave best
+
 
 ```{r boost_best}
 # then choose the best model to finish tuning
@@ -203,19 +206,11 @@ final_boost_wf <- boost_wf %>%
 final_boost <- final_boost_wf %>%
   fit(data = gss_train)
 
-final_boost_wf
-# best values for
-  #min_n = 2
-  #tree_depth = 8
-  #learn_rate = 3.16227766016838e-06
-
-
 # can see how important each var is here
-library(vip)
-
-final_boost %>% 
+final_tree %>% 
   pull_workflow_fit() %>% 
-  vip()
+  vip() +
+  labs(title = "Important variables\nin final boosted tree model") 
 
 # last fit & eval of model performance
 final_boost_wf %>%
@@ -273,6 +268,10 @@ bind_rows(knn_res, lr_res, ridge_rs)
 knn_res
   
 ```
+so it seems that random_forest gave best model. predicted about 79% of data correctly. logistic gave worst (53% accuracy()), probably cuz it didn't use all var in dataset as predictor var (so less of the variation could've been explained).
+for models that included all available vars as predictors, knn did worst. 
+even tuning didn't help boosted tree model do better than random forest (tuned boosted tree got 75% right) or even ridge model, indicating that there's a limit to how far tuning will get you if your model overall doesn't work that well. 
+
 
 ## Session info
 
